--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.iml
+
 # Created by .ignore support plugin (hsz.mobi)
 .idea/**
 ### Java template
@@ -73,3 +75,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/
+target/
