--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                                 <argument>-createjar</argument>
                                 <argument>-nocss2bin</argument>
                                 <argument>-appclass</argument>
-                                <argument>io.dkozak.sfc.proj.Main</argument>
+                                <argument>cz.vutbr.fit.pdb.App</argument>
                                 <argument>-srcdir</argument>
                                 <argument>${project.build.directory}/classes</argument>
                                 <argument>-outdir</argument>
