connect right pane with dummy data

--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
+                    <include>**/*.svg</include>
                     <include>**/*.xml</include>
                     <include>**/*.css</include>
                     <include>**/*.properties</include>
